--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Godzil",
-  "description": "Crunchy.js is a fork of Crunchyroll.js, capable of downloading anime episodes from the popular CrunchyRoll streaming service.",
+  "description": "Crunchy is a fork of Crunchyroll.js, capable of downloading anime episodes from the popular CrunchyRoll streaming service.",
   "license": "MIT",
   "keywords": [
     "anime",
