--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "xml2js": "0.4.5"
   },
   "devDependencies": {
-    "typing": "2.1.0",
+    "typings": "2.1.0",
     "tslint": "2.3.0-beta",
     "typescript": "1.5.0-beta"
   },
