--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git://github.com/Godzil/crunchyroll.js.git"
   },
-  "version": "1.1.16",
+  "version": "1.1.17-0",
   "bin": {
     "crunchy": "./bin/crunchy"
   },
