--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheerio": "^0.22.0",
     "cloudscraper": "^1.4.1",
     "commander": "^2.6.0",
+    "fs-extra": "^2.0.0",
     "mkdirp": "^0.5.0",
     "request": "^2.74.0",
     "xml2js": "^0.4.5"
