--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
+sudo: false
 node_js:
- - '4.6'
+ - 4
+ - 5
+ - 6
 before_install:
- - npm install -g tsconfig-lint
- - npm install -g tslint
- - npm install -g typescript
- - npm install -g typings
+ - npm install --dev
 script:
  - npm run types
  - npm run compile
