--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
  - 5
  - 6
 before_install:
- - npm install --dev
+ - npm install --only=dev
 script:
  - npm run types
  - npm run compile
