--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "git://github.com/Godzil/crunchyroll.js.git"
   },
+  "engines": {
+    "node": ">=5.0"
+  },
   "version": "1.1.19",
   "bin": {
     "crunchy": "./bin/crunchy"
