--- a/package.json
+++ b/package.json
@@ -23,23 +23,24 @@
     "big-integer": "^1.4.4",
     "cheerio": "^0.22.0",
     "cloudscraper": "^1.4.1",
-    "commander": "^2.6.0",
-    "fs-extra": "^2.0.0",
+    "commander": "^2.12.2",
+    "fs-extra": "^5.0.0",
     "mkdirp": "^0.5.0",
     "request": "^2.74.0",
     "xml2js": "^0.4.5"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.6",
+    "@types/mkdirp": "^0.5.2",
+    "@types/request": "^2.0.9",
+    "@types/xml2js": "^0.4.2",
     "tsconfig-lint": "^0.12.0",
-    "tslint": "^4.4.2",
-    "typescript": "^2.2.0",
-    "typings": "^2.1.0"
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.2"
   },
   "scripts": {
-    "prepublish": "npm run types && tsc",
-    "compile": "tsc",
+    "prepare": "tsc",
     "test": "tslint -c ./tslint.json --project ./tsconfig.json ./src/**/*.ts",
-    "types": "typings install",
     "start": "node ./bin/crunchy"
   },
   "bugs": {
