--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ sudo: false
 node_js:
  - 5
  - 6
+ - 7
+ - 8
+ - 9
 before_install:
  - npm install --only=dev
 script:
- - npm run types
- - npm run compile
+ - npm run prepare
  - npm test
