--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "typescript": "^2.6.2"
   },
   "scripts": {
-    "prepare": "tsc",
+    "build": "tsc",
     "test": "tslint -c ./tslint.json --project ./tsconfig.json ./src/**/*.ts",
     "start": "node ./bin/crunchy"
   },
