--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^2.6.2"
   },
   "scripts": {
+    "prepublishOnly": "npm run build",
     "build": "tsc",
     "test": "tslint -c ./tslint.json --project ./tsconfig.json ./src/**/*.ts",
     "start": "node ./bin/crunchy"
