--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "tsc",
-    "test": "tslint -c ./tslint.json --project ./tsconfig.json ./src/**/*.ts",
+    "test": "tslint --project .",
     "start": "node ./bin/crunchy"
   },
   "bugs": {
