--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
   },
   "dependencies": {
     "big-integer": "^1.6.27",
+    "bluebird": "^3.5.1",
     "cheerio": "^0.22.0",
     "cloudscraper": "^1.5.0",
     "commander": "^2.15.1",
     "fs-extra": "^5.0.0",
     "mkdirp": "^0.5.0",
     "request": "^2.85.0",
+    "request-promise": "^4.2.2",
     "xml2js": "^0.4.5"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.20",
+    "@types/request-promise": "^4.1.41",
     "@types/cheerio": "^0.22.7",
     "@types/mkdirp": "^0.5.2",
     "@types/request": "^2.47.0",
