--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/request": "^2.47.0",
     "@types/request-promise": "^4.1.41",
     "@types/xml2js": "^0.4.2",
+    "@types/fs-extra": "^5.0.2",
     "tsconfig-lint": "^0.12.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.1"
