--- a/package.json
+++ b/package.json
@@ -21,31 +21,33 @@
     "crunchy.sh": "./bin/crunchy.sh"
   },
   "dependencies": {
-    "big-integer": "^1.6.27",
+    "big-integer": "^1.6.30",
     "bluebird": "^3.5.1",
     "cheerio": "^0.22.0",
     "cloudscraper": "^1.5.0",
     "commander": "^2.15.1",
-    "fs-extra": "^5.0.0",
+    "fs-extra": "^6.0.1",
     "mkdirp": "^0.5.0",
-    "request": "^2.85.0",
+    "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "xml2js": "^0.4.5"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.20",
     "@types/cheerio": "^0.22.7",
+    "@types/fs-extra": "^5.0.2",
     "@types/mkdirp": "^0.5.2",
     "@types/request": "^2.47.0",
     "@types/request-promise": "^4.1.41",
     "@types/xml2js": "^0.4.2",
     "@types/fs-extra": "^5.0.2",
     "tsconfig-lint": "^0.12.0",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.1"
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.1"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
+    "compile": "tsc",
     "build": "tsc",
     "test": "tslint --project .",
     "start": "node ./bin/crunchy"
