--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "commander": "^2.15.1",
     "fs-extra": "^6.0.1",
     "mkdirp": "^0.5.0",
+    "pjson": "^1.0.9",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "xml2js": "^0.4.5"
