--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
     "crunchy.sh": "./bin/crunchy.sh"
   },
   "dependencies": {
-    "@types/node": "^10.3.3",
-    "big-integer": "^1.6.31",
+    "big-integer": "^1.6.32",
     "bluebird": "^3.5.1",
     "cheerio": "^0.22.0",
     "cloudscraper": "^1.5.0",
-    "commander": "^2.15.1",
-    "fs-extra": "^6.0.1",
+    "commander": "^2.16.0",
+    "fs-extra": "^7.0.0",
     "mkdirp": "^0.5.0",
     "pjson": "^1.0.9",
     "request": "^2.87.0",
@@ -35,15 +34,17 @@
     "xml2js": "^0.4.5"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.20",
-    "@types/cheerio": "^0.22.7",
-    "@types/fs-extra": "^5.0.3",
+    "@types/bluebird": "^3.5.23",
+    "@types/cheerio": "^0.22.8",
+    "@types/fs-extra": "^5.0.4",
     "@types/mkdirp": "^0.5.2",
+    "@types/node": "^10.5.3",
     "@types/request": "^2.47.1",
-    "@types/request-promise": "^4.1.41",
+    "@types/request-promise": "^4.1.42",
     "@types/xml2js": "^0.4.3",
+    "npm-check": "^5.7.1",
     "tsconfig-lint": "^0.12.0",
-    "tslint": "^5.10.0",
+    "tslint": "^5.11.0",
     "typescript": "^2.9.2"
   },
   "scripts": {
