--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "pjson": "^1.0.9",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
+    "tough-cookie-file-store": "^1.2.0",
+    "uuid": "^3.3.2",
     "xml2js": "^0.4.5"
   },
   "devDependencies": {
@@ -41,6 +43,7 @@
     "@types/node": "^10.5.3",
     "@types/request": "^2.47.1",
     "@types/request-promise": "^4.1.42",
+    "@types/uuid": "^3.4.3",
     "@types/xml2js": "^0.4.3",
     "npm-check": "^5.7.1",
     "tsconfig-lint": "^0.12.0",
